<resources>
    <string name="app_name">Navigation Demo</string>
    <string name="title_home">Home</string>
    <string name="title_onboard">Onboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="title_login">Log in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Login</string>
    <string name="action_sign_out">Log out</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="invalid_username_or_password_failure">Invalid username or password</string>
    <string name="login_failed">Login failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_done">Done</string>
    <string name="title_welcome">Welcome</string>
    <string name="welcome_back">Welcome back, %1$s</string>

    <string name="onboard_message">What\'s new in this app</string>
    <string name="session_expired_message">Your session has expired</string>
</resources>